# Resume_Analyze

./: .gitignore  README.md  compose.yml  docker-compose.yml  start.sh
backend/: .env  Dockerfile  alembic.ini  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 0f7e68fba84a_create_all_tables.py  a7bfab124fae_fixed_metadata_import.py  b7941a0ce0fa_initial.py  dfeaf2a749df_initial_tables.py  f44fb01c2706_professions.py
backend/src/: main.py  start.sh
backend/src/api/: auth_routes.py  competence_routes.py  depends.py  ml_routes.py  profession_routes.py  resume_routes.py  user_routes.py
backend/src/core/: config.py  exceptions.py
backend/src/infrastructure/grpc/: ml_client.py
backend/src/infrastructure/postgres/: database.py  models.py
backend/src/infrastructure/postgres/repository/: competence_repo.py  profession_repo.py  user_repo.py
backend/src/project/api/: auth_routes.py  competence_routes.py  depends.py  profession_routes.py  user_routes.py
backend/src/project/core/: config.py  exceptions.py
backend/src/project/infrastructure/postgres/: database.py  models.py
backend/src/project/infrastructure/postgres/repository/: competence_repo.py  profession_repo.py  user_repo.py
backend/src/project/schemas/: competence.py  profession.py  user.py
backend/src/proto/: ml_service.proto
backend/src/resource/: auth.py
backend/src/schemas/: auth.py  competence.py  profession.py  user.py
backend/src/services/: resume_parser.py
frontend/react_app/: Dockerfile  package-lock.json  package.json  (+1 more)
model/: Dockerfile  requirements.txt
(+45 files in other folders)
