[tool.poetry]
name = "backend"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13.12"
fastapi = "^0.128.6"
alembic = "^1.18.3"
sqlalchemy = "^2.0.46"
pydantic-settings = "^2.12.0"
uvicorn = "^0.40.0"
asyncpg = "^0.31.0"
greenlet = "^3.3.1"
tenacity = "^9.1.4"
pyjwt = "^2.11.0"
python-jose = "^3.5.0"
python-multipart = "^0.0.22"
python-dotenv = "^1.2.1"
bcrypt = "^5.0.0"
httpx = "^0.28.1"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
PyPDF2 = "^3.0.0"
python-docx = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
